[gd_scene load_steps=4 format=3 uid="uid://csptsebynxycc"]

[ext_resource type="Script" path="res://Minigames/Pickpocketting/pickpocket_obstacle.gd" id="1_bopom"]
[ext_resource type="Texture2D" uid="uid://bi2oy0ik5ki13" path="res://Art/Misc/BrainJar7.png" id="2_wy7wt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6fgm"]
size = Vector2(6.66667, 10)

[node name="PickpocketObstacle" type="CharacterBody2D"]
z_index = 4
scale = Vector2(0.3, 0.3)
script = ExtResource("1_bopom")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wy7wt")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_v6fgm")

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="TrackingTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
[connection signal="timeout" from="TrackingTimer" to="." method="_on_tracking_timer_timeout"]
